--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="La chouette agence est une agence de web design basée sur Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line-min.css">
