--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
 	<title>La chouette agence</title>
     <meta name="description" content="La chouette agence est une agence de web design basée sur Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line-min.css">
-	<script src="./js/jquery-2.1.0-min.js" defer></script>
-	<script src="./js/bootstrap-min.js" defer></script>
-	<script src="./js/blocs-min.js" defer></script>
-	<script src="./js/jquery.touchSwipe-min.js" defer></script>
-	<script src="./js/gmaps-min.js" defer></script>
+	<link rel="stylesheet" type="text/css" href="./css/et-line-min.css">	
 <!-- Analytics -->
  
 <!-- Analytics END -->
