--- a/page2.html
+++ b/page2.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>Contactez-nous</title>
-    <meta name="description" content="Page de contact de la chouette agence">
+	<meta name="description" content="Page de contact de la chouette agence">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line-min.css">
-	<script src="./js/jquery-2.1.0-min.js"></script>
-	<script src="./js/bootstrap-min.js"></script>
-	<script src="./js/blocs-min.js"></script>
-	<script src="./js/jqBootstrapValidation-min.js"></script>
-	<script src="./js/formHandler-min.js"></script>  
+	
 <!-- Analytics -->
  
 <!-- Analytics END -->
